--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,10 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"] // @ → src로 매핑
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
