--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-plugin-vitest": "^0.2.6",
     "vite-plugin-eslint": "^1.8.1",
     "jsdom": "^25.0.1",
-    "typescript": "^5.2.2",
+    "typescript": "5.2.2",
     "vite": "^5.3.1",
     "vitest": "^2.0.2"
   }
