--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,8 @@ jobs:
         run: |
           pnpm install
           pnpm run test
+
+      - name: test e2e
+        run: |
+          pnpm install
+          pnpm run test:e2e
