ci: 테스트 실행 명령어 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,4 @@ jobs:
       - name: test basic
         run: |
           pnpm install
-          pnpm run test
-      - name: test e2e
-        run: |
-          pnpm install
-          pnpm run test:e2e
+          pnpm run test && pnpm run test:e2e
