--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
         run: |
           pnpm install
           pnpm run lint
+      - name: test e2e
+        run: |
+          pnpm install
+          pnpm run test:e2e
   test:
     runs-on: ubuntu-latest
     steps:
@@ -45,4 +49,8 @@ jobs:
       - name: test basic
         run: |
           pnpm install
-          pnpm run test && pnpm run test:e2e
+          pnpm run test
+      - name: test e2e
+        run: |
+          pnpm install
+          pnpm run test:e2e
