--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,7 @@ jobs:
         run: |
           pnpm install
           pnpm run lint
-      - name: test e2e
-        run: |
-          pnpm install
-          pnpm run test:e2e
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -50,7 +47,5 @@ jobs:
         run: |
           pnpm install
           pnpm run test
-      - name: test e2e
-        run: |
-          pnpm install
+          npx playwright install --with-deps
           pnpm run test:e2e
