feat:server_e2e.js를 추가하여 e2e 테스트할 때는 다른 서버를 사용할 수 있게 하기

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server:watch": "node --watch server.js",
     "start": "vite",
     "dev": "concurrently \"pnpm run server:watch\" \"pnpm run start\"",
+    "dev:frontend": "vite",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
