--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "server": "node server.js",
     "server:watch": "node --watch server.js",
     "start": "vite",
+    "dev:e2e": "concurrently \"node server-e2e.js\" \"vite\"",
     "dev": "concurrently \"pnpm run server:watch\" \"pnpm run start\"",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "build": "tsc -b && vite build",
+    "build": "tsc --noEmit && vite build",
     "lint": "eslint . --ext ts,tsx,js --report-unused-disable-directives --max-warnings 0",
-    "test:e2e": "playwright test",
+    "test:e2e": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^22.15.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
