--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:coverage": "vitest run --coverage",
     "build": "tsc --noEmit && vite build",
     "lint": "eslint . --ext ts,tsx,js --report-unused-disable-directives --max-warnings 0",
-    "test:e2e": "playwright test --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
