--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "test:coverage": "vitest run --coverage",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx,js --report-unused-disable-directives --max-warnings 0",
-    "e2e": "playwright test",
-    "e2e:ui": "playwright test --ui",
-    "e2e:debug": "playwright test --debug"
+    "e2e": "TEST=true playwright test --workers=1",
+    "e2e:ui": "TEST=true playwright test --ui --workers=1",
+    "e2e:debug": "playwright test --debug --workers=1"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -33,6 +33,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
