--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx,js --report-unused-disable-directives --max-warnings 0",
-    "e2e": "TEST=true playwright test --workers=1",
-    "e2e:ui": "TEST=true playwright test --ui --workers=1",
-    "e2e:debug": "playwright test --debug --workers=1"
+    "lint": "eslint . --ext ts,tsx,js --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -29,12 +26,9 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
-    "@types/express": "^5.0.2",
-    "@types/node": "^22.15.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -52,11 +46,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-vitest": "^0.2.6",
+    "vite-plugin-eslint": "^1.8.1",
     "jsdom": "^25.0.1",
-    "playwright": "^1.52.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
-    "vite-plugin-eslint": "^1.8.1",
     "vitest": "^2.0.2"
   }
 }
