feat : e2e테스트 적용

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 .vscode
 node_modules
 .coverage
+.playwright
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env.test.local
+
+
+
