feat: E2E 테스트 환경 설정 및 캘린더 E2E 테스트 추가
- Playwright를 사용한 E2E 테스트 환경을 설정하고 관련 의존성을 추가함.
- 캘린더 기능에 대한 E2E 테스트 케이스를 작성하여 반복 일정 생성, 수정 및 삭제 기능을 검증함.
- 서버를 위한 간단한 Express 애플리케이션을 추가하여 테스트를 위한 API 엔드포인트를 제공함.
- tsconfig 및 vite 설정을 업데이트하여 E2E 테스트 파일을 포함함.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "server": "node server.js",
-    "server:watch": "node --watch server.js",
+    "server:watch": "node --watch server_e2e.js",
     "start": "vite",
     "dev": "concurrently \"pnpm run server:watch\" \"pnpm run start\"",
     "test": "vitest",
@@ -13,7 +13,10 @@
     "test:coverage": "vitest run --coverage",
     "build": "tsc -b && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write **/*.{ts,tsx}"
+    "format": "prettier --write **/*.{ts,tsx}",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:codegen": "playwright codegen"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -34,9 +37,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^22.15.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -58,6 +63,7 @@
     "eslint-plugin-vitest": "^0.2.8",
     "globals": "^16.1.0",
     "jsdom": "^25.0.1",
+    "playwright": "^1.52.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^5.3.1",
