--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,6 +33,6 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["vitest/globals"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "server_e2e.js"],
   "exclude": ["node_modules"]
 }
