--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^2.0.3",
     "@vitest/ui": "^2.1.9",
+    "@zag-js/focus-visible": "0.31.1",
     "concurrently": "^8.2.2",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
